# KSquareLibraries

./: .cproject  .gitattributes  .gitignore  .project  CMakeLists.txt  Dictionary.txt  KSquare.code-workspace  KSquare.cpp  KSquareLibraries.sln  KSquareLibraries_MainPage.h  Makefile  README.md  UpgradeLog.XML  UpgradeLog.htm  index.html  params.json  tatus
Doxygen/: Doxyfile  KSquareLibrariesDoxyGen  KSquareLibrariesDoxyGen - Copy  KSquareLibrariesDoxyGen.Temp  doxygen_entrydb_2132.tmp  doxygen_entrydb_3412.tmp  doxygen_entrydb_6924.tmp  doxygen_entrydb_9132.tmp  doxygen_log.txt
Doxygen/html/: Thumbs.db  _application_8cpp.html  _application_8cpp_source.html  _application_8h.html  _application_8h_source.html  _atom_8cpp.html  _atom_8cpp_source.html  _atom_8h.html  _atom_8h.js  _atom_8h_source.html  _attribute_8cpp.html  _attribute_8cpp_source.html  _attribute_8h.html  _attribute_8h.js  _attribute_8h_source.html  _b_m_p_image_8cpp.html  _b_m_p_image_8cpp.js  _b_m_p_image_8cpp_source.html  _b_m_p_image_8h.html  _b_m_p_image_8h.js  _b_m_p_image_8h_source.html  _b_m_pheader_8h.html  _b_m_pheader_8h.js  _b_m_pheader_8h_source.html  _binary_class_parms_8cpp.html  _binary_class_parms_8cpp_source.html  _binary_class_parms_8h.html  _binary_class_parms_8h.js  _binary_class_parms_8h_source.html  _bit_string_8cpp.html  _bit_string_8cpp_source.html  _bit_string_8h.html  _bit_string_8h.js  _bit_string_8h_source.html  _blob_8cpp.html  _blob_8cpp_source.html  _blob_8h.html  _blob_8h.js  _blob_8h_source.html  _chart_8cpp.html  (+2339 more)
Doxygen/latex/: _application_8cpp.tex  _application_8h.tex  _atom_8cpp.tex  _atom_8h.tex  _attribute_8cpp.tex  _attribute_8h.tex  _b_m_p_image_8cpp.tex  _b_m_p_image_8h.tex  _b_m_pheader_8h.tex  _binary_class_parms_8cpp.tex  _binary_class_parms_8h.tex  _bit_string_8cpp.tex  _bit_string_8h.tex  _blob_8cpp.tex  _blob_8h.tex  _chart_8cpp.tex  _chart_8h.tex  _class_assignments_8cpp.tex  _class_assignments_8h.tex  _class_prob_8cpp.tex  _class_prob_8h.tex  _class_statistic_8cpp.tex  _class_statistic_8h.tex  _classification_bias_matrix_8cpp.tex  _classification_bias_matrix_8h.tex  _classifier2_8cpp.tex  _classifier2_8h.tex  _cmd_line_expander_8cpp.tex  _cmd_line_expander_8h.tex  _compressor_8cpp.tex  _compressor_8h.tex  _configuration_8cpp.tex  _configuration_8h.tex  _confusion_matrix2_8cpp.tex  _confusion_matrix2_8h.tex  _contour_follower_8cpp.tex  _contour_follower_8h.tex  _convex_hull_8cpp.tex  _convex_hull_8h.tex  _cross_validation_8cpp.tex  (+772 more)
JobManager/: KKJob.cpp  KKJob.h  KKJobManager.cpp  KKJobManager.h  KKJobManager.vcproj  KKJobManager.vcxproj  KKJobManager.vcxproj.filters  Makefile  ReadMe.txt
KKBase/: .autotools  .cproject  .project  Algorithms.h  Application.cpp  Application.h  Atom.cpp  Atom.h  BMPImage.cpp  BMPImage.h  BMPheader.h  BitString.cpp  BitString.h  Blob.cpp  Blob.h  BuildGetGitVersion.cmd  CMakeLists.txt  Chart.cpp  Chart.h  CmdLineExpander.cpp  CmdLineExpander.h  Compressor.cpp  Compressor.h  Configuration.cpp  Configuration.h  ContourFollower.cpp  ContourFollower.h  ConvexHull.cpp  ConvexHull.cpp.bak  ConvexHull.h  DateTime.cpp  DateTime.h  DisableConversionWarning.h  Downloads - Shortcut.lnk  EigenVector.cpp  EigenVector.h  FirstIncludes.h  GlobalGoalKeeper.cpp  GlobalGoalKeeper.h  GoalKeeper.cpp  (+117 more)
KKBase/Tests/KKStrTests/: KKStrTests.cpp  KKStrTests.vcxproj  KStrTests.vcxproj  KStrTests.vcxproj.filters
KKControls/: KKControls.csproj  RadioButtonList.Designer.cs  RadioButtonList.cs  RangeSelector.Designer.cs  RangeSelector.cs  ScrollingChart.Designer.cs  ScrollingChart.cs
KKControls/Properties/: AssemblyInfo.cs
KKLineScanner/: .autotools  .cproject  .project  CMakeLists.txt  FlatFieldCorrection.cpp  FlatFieldCorrection.h  FlatFieldCorrectionColor.cpp  FlatFieldCorrectionColor.h  FlatFieldCorrectionMono.cpp  FlatFieldCorrectionMono.h  FlowMeterTracker.cpp  FlowMeterTracker.h  KKLineScanner - Copy.vcxproj  KKLineScanner.h  KKLineScanner.vcproj  KKLineScanner.vcxproj  KKLineScanner.vcxproj.filters  Makefile  ReadMe.txt  ScannerClock.cpp  ScannerClock.h  ScannerFile.cpp  ScannerFile.h  ScannerFile2BitEncoded.cpp  ScannerFile2BitEncoded.h  ScannerFile3BitEncoded.cpp  ScannerFile3BitEncoded.h  ScannerFile4BitEncoded.cpp  ScannerFile4BitEncoded.h  ScannerFileEntry.cpp  ScannerFileEntry.h  ScannerFileSimple.cpp  ScannerFileSimple.h  ScannerFileSipper3.cpp  ScannerFileSipper3.h  ScannerFileZLib3BitEncoded.cpp  ScannerFileZLib3BitEncoded.h  ScannerFrame.cpp  ScannerFrame.h  ScannerHeaderFields.cpp  (+5 more)
KKMachineLearning/: .cproject  .project  Attribute.cpp  Attribute.h  BinaryClassParms.cpp  BinaryClassParms.h  BuildGetGitVersion.cmd  CMakeLists.txt  ClassAssignments.cpp  ClassAssignments.h  ClassProb.cpp  ClassProb.h  ClassStatistic.cpp  ClassStatistic.h  ClassificationBiasMatrix.cpp  ClassificationBiasMatrix.h  Classifier2.cpp  Classifier2.h  ConfusionMatrix2.cpp  ConfusionMatrix2.h  CrossValidation.cpp  CrossValidation.h  CrossValidationMxN.cpp  CrossValidationMxN.h  CrossValidationVoting.cpp  CrossValidationVoting.h  DuplicateImages.cpp  DuplicateImages.h  FactoryFVProducer.cpp  FactoryFVProducer.h  FeatureEncoder.cpp  FeatureEncoder.h  FeatureEncoder2.cpp  FeatureEncoder2.h  FeatureFileIO.cpp  FeatureFileIO.h  FeatureFileIOArff.cpp  FeatureFileIOArff.h  FeatureFileIOC45.cpp  FeatureFileIOC45.h  (+98 more)
KKMachineLearning/.csettings/: 0.714002480_cdtBuildSystem  0.714002480_org.eclipse.cdt.core.externalSettings  0.714002480_org.eclipse.cdt.core.settings  cdt.managedbuild.config.gnu.cross.lib.debug.383865691_cdtBuildSystem  cdt.managedbuild.config.gnu.cross.lib.debug.383865691_org.eclipse.cdt.core.settings  cdt.managedbuild.config.gnu.cross.lib.release.2090965794_cdtBuildSystem  cdt.managedbuild.config.gnu.cross.lib.release.2090965794_org.eclipse.cdt.core.settings
Tests/: Tests.vcxproj
Tests/KKBaseTests/: BaseTest.cpp  BaseTest.h  DateTimeTest.cpp  DateTimeTest.h  KKBaseTests.cpp  KKBaseTests.vcxproj  KKBaseTests.vcxproj.filters  KKHeapTest.cpp  KKHeapTest.h  KKQueueTest.cpp  KKQueueTest.h  KKStrTest.cpp  KKStrTest.h  (+10 more)
_UpgradeReport_Files/: Thumbs.db
(+335 files in other folders)
