set(CMAKE_CXX_STANDARD 17)

add_compile_options(-Wall -Wextra -pedantic -Werror)

add_library(KKMachineLearning 
  Attribute.cpp
  BinaryClassParms.cpp
  ClassAssignments.cpp
  ClassificationBiasMatrix.cpp
  Classifier2.cpp
  ClassProb.cpp
  ClassStatistic.cpp
  ConfusionMatrix2.cpp
  CrossValidation.cpp
  CrossValidationMxN.cpp
  CrossValidationVoting.cpp
  DuplicateImages.cpp
  FactoryFVProducer.cpp
  FeatureEncoder2.cpp
  FeatureEncoder.cpp
  FeatureFileIOArff.cpp
  FeatureFileIOC45.cpp
  FeatureFileIOColumn.cpp
  FeatureFileIO.cpp
  FeatureFileIODstWeb.cpp
  FeatureFileIORoberts.cpp
  FeatureFileIOSparse.cpp
  FeatureFileIOUCI.cpp
  FeatureNumList.cpp
  FeatureVector.cpp
  FeatureVectorProducer.cpp
  FileDesc.cpp
  GrayScaleImagesFV.cpp
  GrayScaleImagesFVProducer.cpp
  ImageFeaturesDataIndexed.cpp
  ImageFeaturesNameIndexed.cpp
  KKMLVariables.cpp
  MLClass.cpp
  Model.cpp
  ModelDual.cpp
  ModelKnn.cpp
  ModelOldSVM.cpp
  ModelParam.cpp
  ModelParamDual.cpp
  ModelParamKnn.cpp
  ModelParamOldSVM.cpp
  ModelParamSvmBase.cpp
  ModelParamUsfCasCor.cpp
  ModelSvmBase.cpp
  ModelUsfCasCor.cpp
  NormalizationParms.cpp
  Orderings.cpp
  SizeDistribution.cpp
  svm289_BFS.cpp
  svm2.cpp
  svm.cpp
  SVMModel.cpp
  SVMparam.cpp
  SvmWrapper.cpp
  TrainingClass.cpp
  TrainingConfiguration2.cpp
  TrainingProcess2.cpp
  UsfCasCor.cpp
)

